--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -171,7 +171,8 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.1</version>
-–>        </dependency>
+        </dependency>
+        –>
     <dependency>
     <groupId> org.apache.cassandra</groupId>
     <artifactId>cassandra-all</artifactId>
