--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -162,7 +162,7 @@
             <artifactId>fest-assert</artifactId>
             <version>1.4</version>
         </dependency>
-<!–        <dependency>
+         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.1</version>
@@ -172,7 +172,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.6.1</version>
         </dependency>
-        –>
     <dependency>
     <groupId> org.apache.cassandra</groupId>
     <artifactId>cassandra-all</artifactId>
